--- a/LanguageSchoolManagement/LanguageSchoolManagement/MainWindow.xaml
+++ b/LanguageSchoolManagement/LanguageSchoolManagement/MainWindow.xaml
@@ -7,6 +7,29 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <StackPanel>
+            <ComboBox x:Name="ChoiceLanguage" Height="30" Width="400"  VerticalAlignment="Top" HorizontalAlignment="Left">
+                <TextBlock>English</TextBlock>
+                <TextBlock>French</TextBlock>
+                <TextBlock>German</TextBlock>
+                <TextBlock>Chinese</TextBlock>
+            </ComboBox>
+            <ComboBox x:Name="ChoiceLevel" Height="30" Width="400"  VerticalAlignment="Top" HorizontalAlignment="Left">
+                <TextBlock>Advanced</TextBlock>
+                <TextBlock>Intermediate</TextBlock>
+                <TextBlock>Elementary</TextBlock>
+            </ComboBox>
+            <ComboBox x:Name="ChoiceIntensity" Height="30" Width="400"  VerticalAlignment="Top" HorizontalAlignment="Left">
+                <TextBlock>Intensive</TextBlock>
+                <TextBlock>Regular</TextBlock>
+                <TextBlock>Supportive</TextBlock>
+            </ComboBox>
+            <StackPanel>
+                <TextBox x:Name="TextSurname"  Height="30" Width="400" VerticalContentAlignment="Top" HorizontalAlignment="Left" MaxLength="250" TextChanged="TextBox_Surname">Enter your last name</TextBox>
+                <TextBox x:Name="TextName"  Height="30" Width="400" VerticalContentAlignment="Top" HorizontalAlignment="Left" MaxLength="250" TextChanged="TextBox_Name">Enter your name</TextBox>
+                <Button Content="Ok" Height="30" Width="50" Click="ButtonClickInfo" Margin="10" />
+            </StackPanel>
+        </StackPanel>
+
     </Grid>
 </Window>
