--- a/LanguageSchoolManagement/ReqForm.xaml
+++ b/LanguageSchoolManagement/ReqForm.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LanguageSchoolManagement"
         mc:Ignorable="d"
-        Title="ReqForm" Height="450" Width="800">
+        Title="ReqForm" Height="450" Width="800" Closed="Window_Closed">
     <Grid>
         <StackPanel>
             <ComboBox x:Name="ChoiceLanguage" Height="30" Width="400"  VerticalAlignment="Top" HorizontalAlignment="Left">
