--- a/LanguageSchoolManagement/Mistake.xaml
+++ b/LanguageSchoolManagement/Mistake.xaml
@@ -6,21 +6,30 @@
         xmlns:local="clr-namespace:LanguageSchoolManagement"
         mc:Ignorable="d"
         WindowStartupLocation="CenterOwner"
-        Title="Mistake" Height="120" Width="300">
+        Title="Mistake" Height="120" Width="300" Background="#FFCBA8A8" >
     <Grid>
-        <StackPanel>
-            <Image Source="mistake.jpg" HorizontalAlignment="Left" VerticalAlignment="Center" Height="65" Width="70"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="37*"/>
+            <RowDefinition Height="52*"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Background="#FFE2FFFB" Grid.RowSpan="2">
+            <Image Source="mistake.jpg" HorizontalAlignment="Left" VerticalAlignment="Center" Height="82" Width="84" Margin="10,0,0,0"/>
         </StackPanel>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" >
-            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontStyle="Normal" FontFamily="Times New Roman" Margin="94,0,-0.4,0" Height="35" RenderTransformOrigin="0.521,-0.276">
-                <Run FontSize="10" FontWeight="Bold" Foreground="Black" > Поле не заполнено! </Run>
-                <LineBreak />
-                <Run FontSize="10" FontWeight="Bold" Foreground="Black" > Заполните и повторите попытку. </Run>
-                <LineBreak />
-            </TextBlock >
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="111,14,10,29" Width="171" Height="46" Grid.RowSpan="2" >
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontStyle="Normal" FontFamily="Times New Roman" Margin="10,0,0,0" Height="45" RenderTransformOrigin="0.521,-0.276" Foreground="#FF0B257E"><Run FontSize="10" FontWeight="Bold" Text="Поле не заполнено!" /><LineBreak /><Run FontSize="10" FontWeight="Bold" Text="Заполните и повторите попытку." /><LineBreak /></TextBlock>
         </StackPanel>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="108,0,60.6,0.4" Width="125">
-            <Button Content="Ok" Height="20" Width="57" Click="ButtonOkClick" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Bottom"  />
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="107,0,115,0" Width="70" Grid.Row="1">
+            <Button Content="Ok" Height="20" Width="45" Click="ButtonOkClick" Margin="0,10,7,10" HorizontalAlignment="Right"  VerticalAlignment="Bottom" Foreground="#FF0B1259"  >
+                <Button.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black"/>
+                        <GradientStop Color="White" Offset="1"/>
+                        <GradientStop Color="#FF21C1C9" Offset="0.589"/>
+                        <GradientStop Color="#FFE9F8F9" Offset="0.894"/>
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
         </StackPanel>
     </Grid>
 </Window>
