--- a/LanguageSchoolManagement/ReqForm.xaml
+++ b/LanguageSchoolManagement/ReqForm.xaml
@@ -6,15 +6,7 @@
         xmlns:local="clr-namespace:LanguageSchoolManagement"
         mc:Ignorable="d"
         WindowStartupLocation="CenterOwner"
-        Title="ReqForm" Height="450" Width="800" Closed="Window_Closed">
-
-
-
-
-
-
-
-
+        Title="ReqForm" Height="500" Width="800" Closed="Window_Closed">
     <Grid>
         <StackPanel Background="#FFC2E9FF">
             <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontStyle="Italic" FontFamily="Times New Roman" Foreground="#FF133A72">
@@ -52,7 +44,8 @@
                 <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontStyle="Italic" FontFamily="Times New Roman" Foreground="#FF133A72"><Run FontSize="20" FontWeight="Bold" Text="Enter your name" /><LineBreak /></TextBlock>
                 <TextBox x:Name="TextName"  Height="30" Width="407" VerticalContentAlignment="Top" HorizontalAlignment="Left" MaxLength="250" 
                          TextChanged="TextBox_Name" Margin="193,0,0,0"/>
-                <Button Content="Ok" Height="30" Width="50" Click="ButtonClickInfo" Margin="10" Background="#FF2750A8" Foreground="#FF133A72" />
+                <Button Content="Ok" Height="30" Width="50" Click="ButtonClickInfo" Margin="10" Background="#FF2750A8"/>
+                <Button Content="Return to the Main Window" Height="30" Width="200" Click="ButtonClickReturnInfo" Margin="10" Background="#FF2750A8"/>
             </StackPanel>
         </StackPanel>
 
