--- a/LanguageSchoolManagement/MainWindow.xaml
+++ b/LanguageSchoolManagement/MainWindow.xaml
@@ -7,7 +7,15 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <StackPanel Background="#FFE8FEFF">
+        <StackPanel Background="#FFA0C2FF" Margin="1,0,0,-46" RenderTransformOrigin="0.5,0.5">
+            <StackPanel.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.209"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </StackPanel.RenderTransform>
             <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontStyle="Italic" FontFamily="Times New Roman">
                 <Run FontSize="20" FontWeight="Bold" Foreground="Black" > Choice Language </Run>
                 <LineBreak />
@@ -40,19 +48,40 @@
                 <Run FontSize="20" FontWeight="Bold" Foreground="Black" > Choice Type </Run>
                 <LineBreak />
             </TextBlock >
-            <ComboBox x:Name="ChoiceType" Height="30" Width="400"  VerticalAlignment="Top" HorizontalAlignment="Center">
+            <ComboBox x:Name="ChoiceType" Height="30" Width="400"  VerticalAlignment="Top" HorizontalAlignment="Center" Margin="196,0">
                 <ComboBox.Background>
                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                         <GradientStop Color="#FFF0F0F0" Offset="0"/>
                         <GradientStop Color="#FF783737" Offset="1"/>
                     </LinearGradientBrush>
                 </ComboBox.Background>
-                <TextBlock>Individual</TextBlock>
-                <TextBlock>Group</TextBlock>
+                <TextBlock><Run Text="Individual"/></TextBlock>
+                <TextBlock><Run Text="Group"/></TextBlock>
             </ComboBox>
-            <StackPanel>
-                <Button Content="See result" Height="30" Width="100" Click="ButtonClickInfo" Margin="10" />
-                <Button Content="Add new person" Height="30" Width="50" Click="ButtonClickAdd" Margin="10" />
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontStyle="Italic" FontFamily="Times New Roman">
+                <Run FontSize="20" FontWeight="Bold" Foreground="Black" > Choice Time </Run>
+                <LineBreak />
+            </TextBlock >
+            <ComboBox x:Name="ChoiceTime" Height="30" Width="400"  VerticalAlignment="Top" HorizontalAlignment="Center" Margin="196,0">
+                <TextBlock><Run Text="3 months"/></TextBlock>
+                <TextBlock><Run Text="5 months"/></TextBlock>
+                <TextBlock><Run Text="7 months"/></TextBlock>
+                <TextBlock><Run Text="9 months"/></TextBlock>
+                <TextBlock><Run Text="12 months"/></TextBlock>
+                
+            </ComboBox>
+            <StackPanel Height="123" Margin="0,0,10,0" RenderTransformOrigin="0.496,0.489" >
+                <Button Content="See result" Height="30" Click="ButtonClickInfo" Margin="257,10,297,10" RenderTransformOrigin="0.5,0.5" Background="#FF1A3674"  >
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="0.275"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                </Button>
+                <Button Content="Add new person" Height="30" Click="ButtonClickAdd" Margin="0,27,293,10" HorizontalAlignment="Right" Width="228" RenderTransformOrigin="0.496,-3.721" Background="#FF1A3674"   />
             </StackPanel>
         </StackPanel>
         <Button Click="ButtonRulesClick" HorizontalAlignment="Left" FontSize="30" Height="60" Width="60">
